--- a/app/src/main/res/menu/menu_timeline.xml
+++ b/app/src/main/res/menu/menu_timeline.xml
@@ -1,11 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    
     tools:context="com.codepath.apps.restclienttemplate.activities.TimelineActivity">
-    
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
-    
+
+    <item android:id="@+id/composeTweet"
+        android:orderInCategory="5"
+        android:title="@string/composeTweet"
+        app:showAsAction="always"
+        android:icon="@drawable/tweet_compose_icon"/>
     
 </menu>
