fix swipe refresh display minor ui tweek

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="actionbar_background">#00aced</color>
+    <color name="primary_blue">#53777A</color>
+    <color name="white"> #ffffff</color>
 </resources>
