--- a/app/src/main/res/layout/activity_tweet.xml
+++ b/app/src/main/res/layout/activity_tweet.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="com.codepath.apps.restclienttemplate.activities.TweetActivity">
 
 
@@ -10,9 +11,21 @@
         android:id="@+id/tweetMsg"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:hint="@string/default_tweet_msg"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:maxLength="141"
+        android:minLines="5"
+        android:maxLines="10"
+        android:layout_alignParentEnd="true"
+        android:gravity="top" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tweetChars"
+        android:layout_alignLeft="@+id/tweetMsg"
+        android:layout_alignStart="@+id/tweetMsg"
+        android:layout_below="@+id/tweetMsg" />
 
 </RelativeLayout>
