--- a/app/src/main/res/menu/menu_timeline.xml
+++ b/app/src/main/res/menu/menu_timeline.xml
@@ -7,6 +7,6 @@
         android:orderInCategory="5"
         android:title="@string/composeTweet"
         app:showAsAction="always"
-        android:icon="@drawable/tweet_compose_icon"/>
+        android:icon="@drawable/twitter_crack"/>
     
 </menu>
