--- a/app/src/main/res/menu/menu_timeline.xml
+++ b/app/src/main/res/menu/menu_timeline.xml
@@ -8,5 +8,11 @@
         android:title="@string/composeTweet"
         app:showAsAction="always"
         android:icon="@drawable/twitter_crack"/>
-    
+
+    <item android:id="@+id/miProfile"
+        android:orderInCategory="6"
+        android:title="@string/icProfile"
+        app:showAsAction="ifRoom"
+        android:onClick="onProfileView"
+        android:icon="@drawable/ic_profile"/>
 </menu>
