--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -56,8 +56,13 @@
         android:id="@+id/llCounts"
         android:layout_marginBottom="10dp"
         android:layout_width="wrap_content"
+        android:background="#ffc9f2ff"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/rtHeader"
-        android:layout_height="wrap_content">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="wrap_content"
